# plant-counter

./: .gitignore  Observacoes.md  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
src/: detection.py  georef.py  io_utils.py  metrics.py  preprocessing.py  segmentation.py
